fixes text content editor not wrapping

--- a/controller/index.css
+++ b/controller/index.css
@@ -23,8 +23,3 @@ body {
 .triangle.active {
   border-color: #10CFFF transparent transparent transparent;
 }
-
-.textarea {
-  word-wrap: break-word;
-  text-wrap: unrestricted;
-}
